# MunchMunch

./: .gitignore  README.md  docker-compose.yml  nav.php  production.yml  profile.php  pyproject.toml  recipeform.php  shopping.php
.github/workflows/: deploy.yml
api/: DOCKERFILE  app.py  db.py  entry-point.sh  pyproject.toml
api/models/: history.py  mealplan.py  post.py  shopping.py  tags.py  ticket.py  user.py
api/routes/: admin.py  media.py  recipes.py  tags.py  user.py
api/util/: api.py  auth.py  confirmation.py  files.py  search.py  validation.py
cfg/nginx/: default.conf
cfg/pgadmin/: preferences.json  servers.json
web/html/: account.php  add_to_meal_plan.php  admin.php  card.php  contact.php  dashboard.php  favhelp.php  home.php  index.php  login.php  logout.php  meal_plan.php  mealplan.php  nav.php  profile.php  recipe.php  recipeform.php  recipeinfo.php  register.php  search.php  shopping_list.php  support.php  test.php  util.php  welcome.php
web/html/Js/: scripts.js
web/html/css/: nav.css  styles.css
web/html/db/: connect.php
