[tool.poetry]
name = "munchmunch-api"
version = "1.0.0"
description = ""
authors = ["Justin <justin@aperturebot.science>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
psycopg2-binary = "^2.9.10"
peewee = "^3.17.7"
pyyaml = "^6.0.1"
pyjwt = "^2.9.0"
itsdangerous = "^2.2.0"
minio = "^7.2.10"
mongoengine = "^0.29.1"


[tool.poetry.group.dev.dependencies]
setuptools = "^75.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
